--- a/css/style.css
+++ b/css/style.css
@@ -1,86 +1,102 @@
 @charset "UTF-8";
 
-/* Fonts */
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
 
-@font-face {
-    font-family: 'ClashGrotesk-Variable';
-    src: url('../fonts/ClashGrotesk-Variable.woff2') format('woff2'),
-         url('../fonts/ClashGrotesk-Variable.woff') format('woff'),
-         url('../fonts/ClashGrotesk-Variable.ttf') format('truetype');
-         font-weight: 200 700;
-         font-display: swap;
-         font-style: normal;
-  }
-  
-  
-  @font-face {
-    font-family: 'ClashGrotesk-Extralight';
-    src: url('../fonts/ClashGrotesk-Extralight.woff2') format('woff2'),
-         url('../fonts/ClashGrotesk-Extralight.woff') format('woff'),
-         url('../fonts/ClashGrotesk-Extralight.ttf') format('truetype');
-         font-weight: 200;
-         font-display: swap;
-         font-style: normal;
-  }
-  
-  
-  @font-face {
-    font-family: 'ClashGrotesk-Light';
-    src: url('../fonts/ClashGrotesk-Light.woff2') format('woff2'),
-         url('../fonts/ClashGrotesk-Light.woff') format('woff'),
-         url('../fonts/ClashGrotesk-Light.ttf') format('truetype');
-         font-weight: 300;
-         font-display: swap;
-         font-style: normal;
-  }
-  
-  
-  @font-face {
-    font-family: 'ClashGrotesk-Regular';
-    src: url('../fonts/ClashGrotesk-Regular.woff2') format('woff2'),
-         url('../fonts/ClashGrotesk-Regular.woff') format('woff'),
-         url('../fonts/ClashGrotesk-Regular.ttf') format('truetype');
-         font-weight: 400;
-         font-display: swap;
-         font-style: normal;
-  }
-  
-  
-  @font-face {
-    font-family: 'ClashGrotesk-Medium';
-    src: url('../fonts/ClashGrotesk-Medium.woff2') format('woff2'),
-         url('../fonts/ClashGrotesk-Medium.woff') format('woff'),
-         url('../fonts/ClashGrotesk-Medium.ttf') format('truetype');
-         font-weight: 500;
-         font-display: swap;
-         font-style: normal;
-  }
-  
-  
-  @font-face {
-    font-family: 'ClashGrotesk-Semibold';
-    src: url('../fonts/ClashGrotesk-Semibold.woff2') format('woff2'),
-         url('../fonts/ClashGrotesk-Semibold.woff') format('woff'),
-         url('../fonts/ClashGrotesk-Semibold.ttf') format('truetype');
-         font-weight: 600;
-         font-display: swap;
-         font-style: normal;
-  }
-  
-  
-  @font-face {
-    font-family: 'ClashGrotesk-Bold';
-    src: url('../fonts/ClashGrotesk-Bold.woff2') format('woff2'),
-         url('../fonts/ClashGrotesk-Bold.woff') format('woff'),
-         url('../fonts/ClashGrotesk-Bold.ttf') format('truetype');
-         font-weight: 700;
-         font-display: swap;
-         font-style: normal;
-  }
-  
-
+body,
 html {
-    background-color: #0c0b14;
+    padding: 0;
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+    justify-content: center;
+    max-width: 100%;
+    background: #121212;
 }
 
 /* Scrollbar */
@@ -90,11 +106,11 @@ html {
 }
 
 ::-webkit-scrollbar-track {
-    background: #000;
+    background: #101010;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #33ddffd5;
+    background: #33ddffd5;
     border-radius: 20px;
 }
 
@@ -105,27 +121,33 @@ html {
 /* Welcome */
 
 .welcome {
-    padding-top: 50px;
-    padding-bottom: 150px;
+    padding-top: 15%;
+    padding-bottom: 15%;
 }
 
 .welcome h1 {
     text-align: center;
+    font-weight: bold;
+    line-height: 90%;
     font-size: 150px;
-    color: #fff;
-    font-family: "ClashGrotesk-Bold";
-    text-shadow: #b6b6b6 5px 5px 0px;
+    color: white;
+
     animation-name: float;
     animation-duration: 3s;
     animation-iteration-count: infinite;
 }
 
-/* A propos -/- about */
+.portfolio {
+    text-decoration: underline plum;
+}
+
+/* About */
 
 #about {
-    padding-bottom: 100px;
-    padding-left: 305px;
-    padding-right: 300px;
+    padding-left: 17%;
+    padding-right: 17%;
+    padding-bottom: 5%;
+
     animation-name: zoom;
     animation-duration: 3s;
     filter: opacity(0);
@@ -134,128 +156,112 @@ html {
 }
 
 .about h1 {
-    color: #ffffff;
-    font-family: "ClashGrotesk-Semibold";
-    font-size: 100px;
+    color: white;
+    font-size: 80px;
+    font-weight: 800;
     margin-bottom: 10px;
-    background: linear-gradient(90deg, rgb(118, 134, 255) 0%, rgb(255, 194, 194) 100%);
-    border-radius: 20px;
 }
 
 .about h2 {
-    color: #ffffff;
-    font-family: 'Poppins', bold;
+    color: white;
     font-weight: bold;
     font-size: 50px;
     text-decoration: underline rgb(118, 134, 255);
-    margin-top: 0px;
 }
 
 .about h4 {
-    color: rgb(156, 156, 156);
-    font-family: 'Poppins';
+    color: grey;
     font-weight: 500;
-    transition: 500ms;
     font-size: 30px;
 }
 
-.about-classe {
-    font-weight: bold;
-}
-
-.about-pays {
-    font-weight: bold;
-}
-
-.about-pays:hover {
-    background: linear-gradient(90deg, rgba(0, 31, 255, 1) 0%, rgb(255, 206, 206) 50%, rgba(255, 0, 0, 1) 100%);
-    background-clip: border-box;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-.about a {
-    text-decoration: none;
-    transition: 500ms;
-    color: #33DDFF !important;
-}
-
-.about a:hover {
-    border: none;
-    border-radius: 23px;
-    padding: 0px 30px;
-    color: #000 !important;
-    background-color: #5d58f2c2;
-    transition: 500ms;
-}
-
-/* Projets -/- projets */
+/* Projects */
 
 #wrapper {
+    padding-left: 17%;
+    padding-right: 17%;
+    padding-bottom: 5%;
+
     animation-name: zoom;
     animation-duration: 3s;
     filter: opacity(0);
     animation-fill-mode: forwards;
-    animation-delay: 1500ms;
-}
-
-a {
-    text-decoration: none;
-    color: inherit !important;
-    height: 425px;
-    margin-bottom: 50px;
-}
-
-.wrapper {
-    max-width: 850px;
-    margin: 20px auto;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    animation-delay: 1000ms;
 }
 
 #wrapper h1 {
-    color: #ffffff;
-    font-family: 'Tinos', bold;
-    font-weight: bold;
-    font-size: 60px;
+    color: white;
+    font-size: 80px;
+    font-weight: 800;
     margin-bottom: 10px;
-    background: linear-gradient(90deg, rgb(118, 134, 255) 0%, rgb(255, 194, 194) 100%);
-    text-align: left;
-    padding: 0px;
-    padding-right: 950px;
-    margin: 30px;
-    display: none;
-    text-align: center;
 }
 
 #wrapper h2 {
-    color: #ffffff;
-    font-family: 'Poppins', bold;
+    color: white;
     font-weight: bold;
     font-size: 50px;
     text-decoration: underline rgb(118, 134, 255);
-    margin: 30px;
-    padding-bottom: 50px;
-    text-align: center;
+}
+
+.wrapper {
+    padding-top: 3%;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.wrapper a {
+    margin: 1%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+}
+
+.wrapper h3 {
+    color: white;
+    font-size: 20px;
+    margin-top: 5%;
+    text-shadow: 9px 9px 10px #000;
+}
+
+.wrapper h4 {
+    color: white;
+    font-size: 15px;
+    margin: 1% 0%;
+    text-shadow: 9px 9px 10px #000;
 }
 
 .card_wrapper {
-    width: 350px;
-    transition: transform 0.5s;
-    position: relative;
-    height: 430px;
-    box-shadow: 5px 10px 10px #1a1a1a;
-    border-radius: 6px;
-    background: #E4F2F9;
+    height: 350px;
+    width: 600px;
     display: flex;
-    flex-direction: column;
+
+    box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.09);
+    border-radius: 6px;
+    background-size: cover;
+    background-position: center;
+
+    transition: 1s;
+}
+
+.card_summary {
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.281), rgba(0, 0, 0, 0));
+    padding: 0 4%;
+    flex: 1;
+    border-bottom-left-radius: inherit;
+    border-bottom-right-radius: inherit;
+}
+
+a:hover .card_wrapper {
+    transition: 1s;
+    text-decoration: none;
+    box-shadow: 5px 10px 10px #1a1a1a;
+    transform: scale3d(1.008, 1.008, 1);
+}
+
+a:nth-child(1) .card_wrapper {
     background-image: url("/img/skym-mc.png");
-    background-size: 150%;
-    background-repeat: no-repeat;
-    background-position-x: -80px;
 }
 
 a:nth-child(2) .card_wrapper {
@@ -263,67 +269,23 @@ a:nth-child(2) .card_wrapper {
 }
 
 a:nth-of-type(3) .card_wrapper {
-    background-image: url("/img/skym.png");
-}
-
-a:nth-of-type(4) .card_wrapper {
     background-image: url("/img/serendipitartist.png");
 }
 
-a:nth-of-type(5) .card_wrapper {
+a:nth-of-type(4) .card_wrapper {
     background-image: url("/img/skymdev.png");
 }
 
-a:nth-of-type(6) .card_wrapper {
-    background-image: url("/img/skymme.png");
-}
-
-a:nth-of-type(7) .card_wrapper {
-    background-image: url("/img/evgames.png");
-}
-
-.project_summary {
-    margin-top: 260px;
-    position: relative;
-    padding: 0 20px;
-    background: rgb(39, 39, 39);
-    flex: 1;
-    border-bottom-left-radius: inherit;
-    border-bottom-right-radius: inherit;
-}
-
-.project_title {
-    margin-bottom: 0;
-    padding-top: 15px;
-    color: #ffffff;
-    font-family: Poppins;
-}
-
-.created_date {
-    margin: 10px 0;
-    color: #8A8EA0;
-    font-family: Poppins;
-}
-
-.project_desc {
-    margin: 0;
-    font-weight: 300;
-    width: 100%;
-    font-family: Poppins;
-    color: rgb(221, 221, 221);
-}
-
-a:hover .card_wrapper {
-    box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.09);
-    transform: scale3d(1.008, 1.008, 1);
+a:nth-of-type(5) .card_wrapper {
+    background-image: url("/img/cretaceous-kingdom.png");
 }
 
 /* Développement -/- dev */
 
 #dev {
-    padding-bottom: 100px;
-    padding-left: 305px;
-    padding-right: 300px;
+    padding-left: 17%;
+    padding-right: 17%;
+
     animation-name: zoom;
     animation-duration: 3s;
     filter: opacity(0);
@@ -332,44 +294,23 @@ a:hover .card_wrapper {
 }
 
 .dev h1 {
-    color: #ffffff;
-    font-family: "ClashGrotesk-Semibold";
-    font-size: 90px;
+    color: white;
+    font-size: 80px;
+    font-weight: 800;
     margin-bottom: 10px;
-    background: linear-gradient(90deg, rgb(118, 134, 255) 0%, rgb(255, 194, 194) 100%);
-    border-radius: 20px;
 }
 
 .dev h2 {
-    color: #ffffff;
-    font-family: 'Poppins', bold;
+    color: white;
     font-weight: bold;
     font-size: 50px;
-    margin-top: 0px;
     text-decoration: underline rgb(118, 134, 255);
 }
 
 .dev h4 {
-    color: rgb(221, 221, 221);
-    font-family: 'Poppins';
+    color: grey;
     font-weight: 500;
-    transition: 500ms;
     font-size: 30px;
-}
-
-.dev a {
-    text-decoration: none;
-    transition: 500ms;
-    color: #33DDFF !important;
-}
-
-.dev a:hover {
-    border: none;
-    border-radius: 23px;
-    padding: 0px 30px;
-    color: #000 !important;
-    background-color: #5d58f2c2;
-    transition: 500ms;
 }
 
 /* Footer */
@@ -377,7 +318,6 @@ a:hover .card_wrapper {
 .footerChild {
     text-align: center;
     color: #fff;
-    font-family: 'Poppins';
 }
 
 .footerChild a {
@@ -394,391 +334,61 @@ a:hover .card_wrapper {
 
 /* Responsive Web */
 
-@media (max-width: 1366px) {
-
-    body {
-        margin: 0px;
-    }
-
-    /* Welcome */
-
-    .welcome h1 {
-        font-size: 135px;
-        margin-top: 25px;
-    }
-
-    /* A propos -/- about */
-
-    #about {
-        padding-left: 80px;
-        padding-right: 80px;
-    }
-
-    .about h1 {
-        font-size: 100px;
-    }
-
-    .about h2 {
-        font-size: 40px;
-    }
-
-    /* Développement -/- dev */
-
-    #dev {
-        padding-left: 80px;
-        padding-right: 80px;
-    }
-
-    .dev h1 {
-        font-size: 100px;
-    }
-
-    .dev h2 {
-        font-size: 40px;
-    }
-
-}
-
-@media (max-width: 1280px) {
-
-    body {
-        margin: 0px;
-    }
-
-    /* Welcome */
-
-    .welcome h1 {
-        font-size: 135px;
-        margin-top: 25px;
-    }
-
-    /* A propos -/- about */
-
-    #about {
-        padding-left: 80px;
-        padding-right: 80px;
-    }
-
-    .about h1 {
-        font-size: 100px;
-    }
-
-    .about h2 {
-        font-size: 40px;
-    }
-
-    /* Développement -/- dev */
-
-    #dev {
-        padding-left: 80px;
-        padding-right: 80px;
-    }
-
-    .dev h1 {
-        font-size: 100px;
-    }
-
-    .dev h2 {
-        font-size: 40px;
-    }
-
-}
-
-@media (max-width: 1180px) {
-
-    body {
-        margin: 0px;
-    }
-
-    /* Welcome */
-
-    .welcome h1 {
-        font-size: 135px;
-        margin-top: 25px;
-    }
-
-    /* A propos -/- about */
-
-    #about {
-        padding-left: 80px;
-        padding-right: 80px;
-    }
-
-    .about h1 {
-        font-size: 100px;
-    }
-
-    .about h2 {
-        font-size: 40px;
-    }
-
-    /* Développement -/- dev */
-
-    #dev {
-        padding-left: 80px;
-        padding-right: 80px;
-    }
-
-    .dev h1 {
-        font-size: 100px;
-    }
-
-    .dev h2 {
-        font-size: 40px;
-    }
-
-}
-
-@media (max-width: 820px) {
-
-    body {
-        margin: 0px;
-    }
-
-    /* Welcome */
-
-    .welcome h1 {
-        font-size: 135px;
-    }
-
-    /* A propos -/- about */
-
-    #about {
-        padding-left: 30px;
-        padding-right: 30px;
-    }
-
-    .about h1 {
-        font-size: 100px;
-    }
-
-    .about h2 {
-        font-size: 40px;
-    }
-
-    /* Développement -/- dev */
-
-    #dev {
-        padding-left: 30px;
-        padding-right: 30px;
-    }
-
-    .dev h1 {
-        font-size: 100px;
-    }
-
-    .dev h2 {
-        font-size: 40px;
-    }
-
-}
-
-@media (max-width: 768px) {
-
-    body {
-        margin: 0px;
-    }
-
-    /* Welcome */
-
-    .welcome h1 {
-        font-size: 100px;
-        margin-top: 0px;
-    }
-
-    /* A propos -/- about */
-
-    .about h1 {
-        font-size: 90px;
-    }
-
-    /* Développement -/- dev */
-
-    .dev h1 {
-        font-size: 90px;
-    }
-
-}
-
-@media (max-width: 614px) {
-
-    body {
-        margin: 0px;
-    }
-
-    /* Welcome */
+@media (max-width : 435px) {
 
     .welcome {
-        padding: 0px;
+        padding-top: 60%;
+        padding-bottom: 60%;
     }
 
     .welcome h1 {
-        text-align: left;
-        font-size: 60px;
-        padding-top: 150px;
-        padding-bottom: 150px;
-        padding-left: 20px;
-        padding-right: 20px;
-        margin: 0px;
+        font-size: 40px;
     }
-
-    /* A propos -/- about */
 
     #about {
-        padding: 0px;
-    }
-
-    .about {
-        padding: 0px;
-        margin: 0px;
+        padding: 10%;
+        padding-top: 20%;
     }
 
     .about h1 {
-        text-align: left;
-        font-size: 30px;
-        padding: 0px;
-        margin: 10px;
-        display: unset;
-        border-radius: 0px;
-    }
-
-    .about h2 {
-        text-align: left;
         font-size: 50px;
-        padding: 10px;
-        margin: 0px;
     }
-
-    .about h4 {
-        font-size: 20px;
-        padding: 10px;
-        margin: 0px;
-        padding-bottom: 100px;
-    }
-
-    /* Projets -/- projets */
 
     #wrapper {
-        padding-bottom: 100px;
-    }
-
-    .wrapper {
-        margin: 0px;
-        padding: 0px;
+        padding: 10%;
+        padding-top: 20%;
     }
 
     #wrapper h1 {
-        text-align: left;
-        font-size: 30px;
-        padding: 0px;
-        margin: 10px;
-        border-radius: 0px;
-        display: unset;
-    }
-
-    #wrapper h2 {
-        text-align: left;
         font-size: 50px;
-        padding: 10px;
-        padding-bottom: 50px;
-        margin: 0px;
     }
 
-    /* Développement -/- dev */
+    .wrapper {
+        display: inline;
+    }
+
+    .wrapper h3 {
+        margin: 0%;
+    }
+
+    .wrapper h4 {
+        margin: 0%;
+    }
+
+    .card_wrapper {
+        width: 350px;
+        height: 150px;
+        margin-top: 20%;
+        margin-bottom: 0%;
+    }
 
     #dev {
-        padding: 0px;
-        padding-bottom: 100px;
-    }
-
-    .dev {
-        padding: 0px;
-        margin: 0px;
+        padding: 10%;
+        padding-top: 20%;
     }
 
     .dev h1 {
-        text-align: left;
-        font-size: 30px;
-        padding: 0px;
-        margin: 10px;
-        display: unset;
-        border-radius: 0px;
-    }
-
-    .dev h2 {
-        text-align: left;
         font-size: 50px;
-        padding: 10px;
-    }
-
-    .dev h4 {
-        font-size: 20px;
-        padding: 10px;
-    }
-
-}
-
-@media (max-width: 360px) {
-
-    body {
-        margin: 0px;
-    }
-
-    /* Welcome */
-
-    .welcome h1 {
-        font-size: 55px;
-    }
-
-}
-
-@media (max-width: 280px) {
-
-    body {
-        margin: 0px;
-    }
-
-    /* Welcome */
-
-    .welcome h1 {
-        font-size: 40px;
-        justify-content: left;
-    }
-
-    /* Projets -/- projets */
-
-    .card_wrapper {
-        width: 260px;
-    }
-
-    a:nth-of-type(1) .card_wrapper {
-        background-position-x: -270px;
-        background-position-y: -50px;
-        background-size: cover;
-    }
-
-    a:nth-of-type(4) .card_wrapper {
-        background-position-x: -270px;
-        background-position-y: -50px;
-        background-size: cover;
-    }
-
-    a:nth-of-type(5) .card_wrapper {
-        background-position-x: -270px;
-        background-position-y: -50px;
-        background-size: cover;
-    }
-
-    a:nth-of-type(6) .card_wrapper {
-        background-position-x: -270px;
-        background-position-y: -50px;
-        background-size: cover;
-    }
-
-    /* Développement -/- dev */
-
-    .dev h2 {
-        font-size: 40px;
     }
 }
 
