Update de design et de texte

--- a/css/style.css
+++ b/css/style.css
@@ -318,6 +318,7 @@ a:nth-of-type(5) .card_wrapper {
 .footerChild {
     text-align: center;
     color: #fff;
+    padding: 3%;
 }
 
 .footerChild a {
